--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "autoprefixer": "^9.8.6",
         "firebase": "^4.0.0",
         "lodash": "^4.17.19",
+        "node-pre-gyp": "^0.17.0",
         "postcss": "^7.0.32",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
