--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@fortawesome/react-fontawesome": "^0.1.14",
         "@material-ui/core": "^4.12.2",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
@@ -11,9 +12,12 @@
         "firebase": "^4.0.0",
         "lodash": "^4.17.19",
         "node-pre-gyp": "^0.17.0",
+        "nookies": "^2.5.2",
         "postcss": "^7.0.32",
         "react": "^16.13.1",
+        "react-credit-card-input": "^1.1.5",
         "react-dom": "^16.13.1",
+        "react-icons": "^4.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.1",
         "react-social-icons": "^5.5.1",
