--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@fortawesome/react-fontawesome": "^0.1.14",
         "@material-ui/core": "^4.12.2",
+        "@patternfly/react-code-editor": "^4.2.92",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
